deployments/manifests/kubernetes-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fakesvc
  name: fakesvc
spec:
  replicas: 3
  minReadySeconds: 5
  selector:
    matchLabels:
      app: fakesvc
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: fakesvc
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - image: sergkondr/fakesvc:dev # Replace with a released version in production.
        imagePullPolicy: IfNotPresent
        name: fakesvc
        command:
        - /app/fakesvc
        args:
        - --debug
        - --config
        - /app/config.yaml
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        securityContext:
          runAsNonRoot: true
          runAsUser: 65534
          runAsGroup: 65534
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        startupProbe:
          httpGet:
            port: http
            path: /healthz
          failureThreshold: 15
          periodSeconds: 2
        livenessProbe:
          httpGet:
            port: http
            path: /healthz
        readinessProbe:
          httpGet:
            port: http
            path: /healthz
        volumeMounts:
        - name: fakesvc-config
          mountPath: /app/config.yaml
          subPath: config.yaml
      volumes:
      - name: fakesvc-config
        configMap:
          name: fakesvc-config
---
apiVersion: v1
kind: Service
metadata:
  name: fakesvc
spec:
  selector:
    app: fakesvc
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fakesvc
spec:
  ingressClassName: nginx
  rules:
  - host: fakesvc.my.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fakesvc
            port:
              number: 8080
